--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 <body>
     <button id="but">Создать</button>
     <div id="block"></div>
-    <!-- <script src="ex.js"></script> -->
-    <script src="ex2.js"></script>
+    <script src="ex.js"></script>
 </body>
 </html>
